--- a/index.htm
+++ b/index.htm
@@ -29,13 +29,13 @@
             <div class="about-ll">SOME OF MY WORK</div>
             <div class="work-box">
                 <div class="work-card top-card">
-                    <a href="https://tadcos29.github.io/horiseon-accessibility-refactor/"><img src="./Assets/images/horiseon-small.png" class="visimg" alt="A disappointed vizsla puppy."></a>
+                    <a href="https://tadcos29.github.io/horiseon-accessibility-refactor/"><img src="./Assets/images/horiseon-small.png" class="visimg" alt="An office team at work."></a>
                     <div class="cardlabel">As an exercise in my bootcamp, I refactored the codebase of a fictional marketing agency with a view to SEO-optimisation and accessibility.</div>
 
                 </div>
                 <div class="work-card">
-                    <img src="./Assets/images/hemository.png" class="visimg" alt="A capital letter H on white background.">
-                    <div class="cardlabel">Hemository</div>
+                    <a href="https://tegrty.github.io/Sport-Link-Connect/><img src="./Assets/images/SLC.png" class="visimg" alt="A set of geographical pins around the Montreal area, one of which is marked 'Favourited!'."></a>
+                    <div class="cardlabel">Mock-up of a web application intended to connect users on the basis of common interest in geographical features.</div>
 
                 </div>
                 <div class="work-card">
