--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 
                 </div>
                 <div class="work-card">
-                    <a href="https://tegrty.github.io/Sport-Link-Connect/><img src="./Assets/images/SLC.png" class="visimg" alt="A set of geographical pins around the Montreal area, one of which is marked 'Favourited!'."></a>
+                    <a href="https://tegrty.github.io/Sport-Link-Connect/"><img src="./Assets/images/SLC.png" class="visimg" alt="A set of geographical pins around the Montreal area, one of which is marked Favourited!."></a>
                     <div class="cardlabel">SportsLink Connect! Mock-up of a web application intended to connect users on the basis of common interest in geographical features.</div>
 
                 </div>
