--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,10 @@
 
                 </div>
                 <div class="work-card">
+                    <a href="https://zodiacquestfinal.herokuapp.com/"><img src="./Assets/images/Zodiac.png" class="visimg" alt="A blue-and-white logo of ZodiacQuest."></a>
+                    <div class="cardlabel">Zodiac Quest: a simple Phaser.io platformer providing data to a MVC architecture using Express.js, MySQL/Sequelize, and the Handlebars template engine.  </div>
+                </div>
+                <div class="work-card">
                     <img src="./Assets/images/raven-stable-diffusion.jpg" class="visimg" alt="A stylised raven on a bleak background.">
                     <div class="cardlabel">Ravenwatch, an app to aggregate the sightings of unusual corvids across Southern Ontario.</div>
 
